# sunshine-keybase

./: About  Cargo.toml  README.md
.github/workflows/: ci.yml
chain/client/: Cargo.toml
chain/client/src/: error.rs  lib.rs  subxt.rs
chain/pallet/: Cargo.toml
chain/pallet/src/: lib.rs  mock.rs  tests.rs
chain/utils/: Cargo.toml
chain/utils/src/: block.rs  crypto.rs  hasher.rs  lib.rs  trie.rs
client/: Cargo.toml  github-proof-template.md  github-template.md
client-ffi/: Cargo.toml  binding.h  build.rs
client-ffi/src/: lib.rs  macros.rs  result.rs  runtime.rs  suri.rs
client/src/: claim.rs  error.rs  github.rs  lib.rs  service.rs  subxt.rs
core/: Cargo.toml
core/src/: lib.rs
faucet/cli/: Cargo.toml
faucet/cli/src/: lib.rs
faucet/client/: Cargo.toml
faucet/client/src/: lib.rs
faucet/ffi/: Cargo.toml
faucet/ffi/src/: ffi.rs  lib.rs
faucet/ffi/tests/: impl_ffi_macro.rs
faucet/pallet/: Cargo.toml
faucet/pallet/src/: lib.rs  mock.rs  tests.rs
faucet/src/: mock.rs
ffi-utils/: Cargo.toml
ffi-utils/src/: lib.rs
identity/cli/: Cargo.toml
identity/cli/src/: account.rs  device.rs  error.rs  id.rs  key.rs  lib.rs  run.rs  wallet.rs
identity/client/: Cargo.toml  github-proof-instructions.md
identity/client/src/: abstract.rs  claim.rs  client.rs  error.rs  github.rs  lib.rs  service.rs  subxt.rs  suri.rs  utils.rs
identity/client/src/offchain/: block.rs  crypto.rs  mod.rs
identity/client/src/service/: mod.rs
identity/client/src/service/github/: mod.rs  proof-template.md
identity/ffi/: Cargo.toml  binding.h  build.rs  ffi.dart
identity/ffi/src/: error.rs  ffi.rs  lib.rs  macros.rs  runtime.rs
identity/ffi/tests/: impl_ffi_macro.rs
identity/pallet/: Cargo.toml
identity/pallet/src/: lib.rs  mock.rs  tests.rs
identity/utils/: Cargo.toml
identity/utils/src/: lib.rs
keystore/: Cargo.toml
keystore/keybase/: Cargo.toml
keystore/keybase/src/: error.rs  file.rs  generation.rs  keystore.rs  lib.rs  types.rs
keystore/src/: crypto.rs  error.rs  file.rs  generation.rs  keystore.rs  lib.rs  types.rs
keystore/substrate/: Cargo.toml
keystore/substrate/src/: lib.rs
pallet/: Cargo.toml
pallet/src/: lib.rs  mock.rs  tests.rs
sss/: README.md
sss/client/: Cargo.toml
sss/client/src/: error.rs  lib.rs  subxt.rs
sss/pallet/: Cargo.toml
sss/pallet/src/: lib.rs  tests.rs
utils/: Cargo.toml
utils/src/: cid.rs
