[workspace]
members = [
    "bin/cli",
    "bin/client",
    "bin/node",
    "bin/runtime",
    "core",
    "chain/client",
    "chain/pallet",
    "chain/utils",
    "faucet/cli",
    "faucet/client",
    "faucet/pallet",
    "identity/cli",
    "identity/client",
    "identity/ffi",
    "identity/pallet",
    "identity/utils",
    "keystore/keybase",
    "keystore/substrate",
    "ffi-utils",
]

[patch.crates-io]
substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt" }
