[workspace]
members = [
    "bin/cli",
    "bin/client",
    "bin/node",
    "bin/runtime",
    "chain/client",
    "chain/pallet",
    "faucet/cli",
    "faucet/client",
    "faucet/ffi",
    "faucet/pallet",
    "identity/cli",
    "identity/client",
    "identity/ffi",
    "identity/pallet",
    "identity/utils",
]

[patch.crates-io]
substrate-subxt = { git = "https://github.com/dvc94ch/substrate-subxt", branch = "error-bug" }
libipld = { path = "../../ipld/rust-ipld" }
tiny-cid = { path = "../../ipld/tiny-cid" }
