[package]
name = "client-identity"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
async-std = "=1.5.0"
codec = { version = "1.3.0", package = "parity-scale-codec" }
frame-support = "2.0.0-rc2"
ipld-block-builder = "0.3.0"
libipld = "0.3.0"
serde = { version = "1.0.111", features = ["derive"] }
substrate-subxt = "0.8.0"
surf = "1.0.3"
thiserror = "1.0.19"
utils-identity = { version = "0.1.0", path = "../utils" }

[dev-dependencies]
async-std = { version = "=1.5.0", features = ["attributes"] }
env_logger = "0.7.1"
sp-keyring = "2.0.0-rc2"
