[package]
name = "client-identity"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
async-std = { version = "=1.5.0", features = ["unstable"] }
codec = { version = "1.3.0", package = "parity-scale-codec" }
frame-support = "2.0.0-rc3"
ipld-block-builder = "0.3.0"
keystore = { path = "../keystore", package = "keybase-keystore" }
libipld = { version = "0.3.0", features = ["dag-json"] }
serde = { version = "1.0.114", features = ["derive"] }
# TODO export error in libipld
serde_json = "1.0.55"
substrate-subxt = { version = "0.8.0", features = ["client"] }
ureq = { version = "^1", default-features = false, features = ["tls", "json"] }
thiserror = "1.0.20"
utils-identity = { version = "0.1.0", path = "../utils" }

[dev-dependencies]
async-std = { version = "=1.5.0", features = ["attributes"] }
env_logger = "0.7.1"
jsonrpsee = "0.1.0"
node-identity = { path = "../bin/node" }
sp-keyring = "2.0.0-rc3"
tempdir = "0.3.7"
