[package]
name = "sunshine-core"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
async-trait = "0.1.36"
keybase-keystore = { path = "../keystore/keybase" }
codec = { version = "1.3.1", package = "parity-scale-codec", default-features = false }
libipld = { version = "0.3.0", default-features = false }
secrecy = "0.7.0"
substrate-subxt = "0.10.1"
thiserror = "1.0.20"
