[package]
name = "pallet-identity"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0-rc2", default-features = false }
frame-system = { version = "2.0.0-rc2", default-features = false }
sp-core = { version = "2.0.0-rc2", default-features = false }
sp-io = { version = "2.0.0-rc2", default-features = false }
sp-runtime = { version = "2.0.0-rc2", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
]
