[package]
name = "sunshine-chain-client"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
frame-support = "2.0.0-rc5"
parity-scale-codec = "1.3.4"
substrate-subxt = "0.11.0"
sunshine-client-utils = { path = "../../../sunshine-core/client" }
thiserror = "1.0.20"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
test-client = { path = "../../bin/client", features = ["mock"] }
