[package]
name = "sunshine-chain-client"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
frame-support = "2.0.0"
libipld = { version = "0.6.1", default-features = false }
log = "0.4.11"
parity-scale-codec = "1.3.5"
substrate-subxt = "0.12.0"
sunshine-client-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
thiserror = "1.0.20"

[dev-dependencies]
async-std = { version = "1.6.4", features = ["attributes"] }
env_logger = "0.7.1"
test-client = { path = "../../bin/client", features = ["mock"] }
