[package]
name = "sunshine-chain-pallet"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
frame-support = { version = "2.0.0-rc5", default-features = false }
frame-system = { version = "2.0.0-rc5", default-features = false }
orml-utilities = { version = "0.1.1", default-features = false }
parity-scale-codec = { version = "1.3.4", default-features = false }
sp-core = { version = "2.0.0-rc5", default-features = false }
sp-runtime = { version = "2.0.0-rc5", default-features = false }
sp-std = { version = "2.0.0-rc5", default-features = false }
sunshine-chain-utils = { version = "0.1.0", default-features = false, path = "../utils" }

[dev-dependencies]
sp-io = { version = "2.0.0-rc5", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "orml-utilities/std",
    "parity-scale-codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sunshine-chain-utils/std",
]
