[package]
name = "sunshine-chain-utils"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
blake2-rfc = { version = "0.2.18", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
sp-core = { version = "2.0.0-rc5", default-features = false }
sp-std = { version = "2.0.0-rc5", default-features = false }
sp-trie = { version = "2.0.0-rc5", default-features = false }

parity-scale-codec = { version = "1.3.4", optional = true }
rand = { version = "0.7.3", optional = true }
strobe-rs = { version = "0.5.4", optional = true }
thiserror = { version = "1.0.20", optional = true }
x25519-dalek = { version = "0.6.0", optional = true }

[features]
default = ["std"]

std = [
    "parity-scale-codec",
    "rand",
    "sp-core/std",
    "sp-std/std",
    "sp-trie/std",
    "strobe-rs",
    "thiserror",
    "x25519-dalek",
]
