[package]
name = "sunshine-faucet-cli"
version = "0.2.1"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Cli for the faucet module."
license = "ISC"
documentation = "https://docs.rs/sunshine-faucet-cli"
repository = "https://github.com/sunshine-protocol/sunshine-identity"

[dependencies]
clap = "3.0.0-beta.2"
substrate-subxt = "0.12.0"
sunshine-client-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
sunshine-faucet-client = { version = "^0.2.0", path = "../client" }
