[package]
name = "sunshine-faucet-client"
version = "0.2.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Client for the faucet module."
license = "ISC"
documentation = "https://docs.rs/sunshine-faucet-client"
repository = "https://github.com/sunshine-protocol/sunshine-identity"

[dependencies]
parity-scale-codec = "1.3.5"
substrate-subxt = "0.12.0"
sunshine-client-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
# until subxt supports better event decoding we need to include it as a dependency
sunshine-identity-client = { version = "0.2.0", path = "../../identity/client" }

[dev-dependencies]
async-std = { version = "1.6.4", features = ["attributes"] }
test-client = { path = "../../bin/client", features = ["mock"] }
