[package]
name = "sunshine-faucet-pallet"
version = "0.2.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Faucet runtime module."
license = "ISC"
documentation = "https://docs.rs/sunshine-faucet-client"
repository = "https://github.com/sunshine-protocol/sunshine-identity"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
]
