[package]
name = "sunshine-identity-cli"
version = "0.2.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Cli interface for the identity module."
license = "ISC"
documentation = "https://docs.rs/sunshine-identity-cli"
repository = "https://github.com/sunshine-protocol/sunshine-identity"

[dependencies]
async-std = { version = "=1.5.0", features = ["attributes"] }
async-trait = "0.1.36"
clap = "3.0.0-beta.1"
codec = { version = "1.3.0", package = "parity-scale-codec" }
libipld = "0.3.0"
qr2term = "0.2.1"
rpassword = "4.0.5"
substrate-subxt = "0.10.1"
sunshine-core = { version = "0.2.0", path = "../../core" }
sunshine-identity-client = { version = "^0.2.0", path = "../client" }
textwrap = { version = "0.12.1", features = ["terminal_size"] }
thiserror = "1.0.20"
