[package]
name = "sunshine-identity-cli"
version = "0.2.3"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Cli interface for the identity module."
license = "ISC"
documentation = "https://docs.rs/sunshine-identity-cli"
repository = "https://github.com/sunshine-protocol/sunshine-identity"

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
clap = "3.0.0-beta.1"
codec = { version = "1.3.0", package = "parity-scale-codec" }
libipld = "0.3.1"
qr2term = "0.2.1"
rpassword = "5.0.0"
substrate-subxt = "0.11.0"
sunshine-client-utils = { path = "../../../sunshine-core/client" }
sunshine-identity-client = { version = "0.2.1", path = "../client" }
textwrap = { version = "0.12.1", features = ["terminal_size"] }
thiserror = "1.0.20"
