[package]
name = "sunshine-identity-cli"
version = "0.2.3"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Cli interface for the identity module."
license = "ISC"
documentation = "https://docs.rs/sunshine-identity-cli"
repository = "https://github.com/sunshine-protocol/sunshine-identity"

[dependencies]
clap = "3.0.0-beta.2"
codec = { version = "1.3.0", package = "parity-scale-codec" }
qr2term = "0.2.1"
substrate-subxt = "0.12.0"
sunshine-cli-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
sunshine-identity-client = { version = "0.2.1", path = "../client" }
textwrap = { version = "0.12.1", features = ["terminal_size"] }
