[package]
name = "sunshine-identity-client"
version = "0.2.2"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Client for the identity module."
license = "ISC"
documentation = "https://docs.rs/sunshine-identity-client"
repository = "https://github.com/sunshine-protocol/sunshine-identity"

[dependencies]
async-std = { version = "=1.5.0", features = ["unstable"] }
async-trait = "0.1.36"
codec = { version = "1.3.0", package = "parity-scale-codec" }
frame-support = "2.0.0-rc4"
ipld-block-builder = "0.4.1"
libipld = { version = "0.3.0", features = ["dag-json"] }
log = "0.4.8"
serde = { version = "1.0.114", features = ["derive"] }
# TODO export error in libipld
serde_json = "1.0.56"
substrate-subxt = "0.10.1"
sunshine-core = { version = "0.2.0", path = "../../core" }
ureq = { version = "1.3.0", default-features = false, features = ["tls", "json"] }
thiserror = "1.0.20"

[dev-dependencies]
async-std = { version = "=1.5.0", features = ["attributes"] }
test-client = { path = "../../bin/client", features = ["mock"] }
