[package]
name = "sunshine-identity-client"
version = "0.2.3"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Client for the identity module."
license = "ISC"
documentation = "https://docs.rs/sunshine-identity-client"
repository = "https://github.com/sunshine-protocol/sunshine-identity"

[dependencies]
async-std = { version = "1.6.4", features = ["unstable"] }
codec = { version = "1.3.0", package = "parity-scale-codec" }
frame-support = "2.0.0"
libipld = { version = "0.6.1", features = ["dag-json"] }
log = "0.4.11"
serde = { version = "1.0.116", features = ["derive"] }
# TODO export error in libipld
serde_json = "1.0.57"
substrate-subxt = "0.12.0"
sunshine-client-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
ureq = { version = "1.4.1", default-features = false, features = ["tls", "json"] }
thiserror = "1.0.20"

[dev-dependencies]
async-std = { version = "1.6.4", features = ["attributes"] }
test-client = { path = "../../bin/client", features = ["mock"] }
