[package]
name = "sunshine-identity-ffi"
version = "0.2.3"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"
description = "FFI for the identity module."
license = "ISC"
documentation = "https://docs.rs/sunshine-identity-ffi"
repository = "https://github.com/sunshine-protocol/sunshine-identity"

[dependencies]
substrate-subxt = "0.11.0"
sunshine-faucet-client = { version = "^0.2", path = "../../faucet/client", optional = true }
sunshine-ffi-utils = { version = "^0.1", path = "../../../sunshine-core/ffi" }
sunshine-identity-client = { version = "^0.2", path = "../client" }
thiserror = "1.0.20"

[dev-dependencies]
test-client = { path = "../../bin/client" }

[features]
default = []
faucet = ["sunshine-faucet-client"]
