[package]
name = "sunshine-identity-utils"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Utils shared by the runtime and the client."
license = "ISC"
documentation = "https://docs.rs/sunshine-identity-utils"
repository = "https://github.com/sunshine-protocol/sunshine-identity"

[features]
default = ["std"]
std = [
    "codec/std",
    "libipld",
    "serde",
]

[dependencies]
codec = { version = "1.3.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
libipld = { version = "0.3.0", default-features = false, optional = true }
serde = { version = "1.0.114", features = ["derive"], optional = true }
